# fastapi_project

./: Dockerfile  pyproject.toml
fastapi_project/: main.py
