[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Igor Moryto <56959606+Ezykill@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"
wiki-random = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
